Fix modal overlap

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@
     display: flex;
 }
 
+#Import_Export_dialog {
+    z-index: 999;
+}
+
 #nav > button, #saves > button {
     margin: 1em;
     flex-grow: 1;
